[package]
name = "legendary-octo-guacamole"
version = "0.1.0"
authors = ["kouki <kouki@localhost>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
reqwest = "0.11.4"
serde = {version="1.0.126", features=["derive"]}
serde_json = "1.0.64"
